adding validation for existing entity in FindById method

--- a/.gitignore
+++ b/.gitignore
@@ -1018,3 +1018,4 @@
 .metadata/.plugins/org.springframework.ide.eclipse.beans.core.metadata/metadata/.state
 
 Vet/target/classes/META-INF/maven/Veterinaria/Vet/pom.properties
+/.metadata/
